--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -33,7 +33,7 @@ pre {
     border-radius: 3px;
 
     background: #fff;//#272822;
-    .hll { background-color: #272822; }
+    .hll { background-color: #fff; }//#272822;
     .c { color: #75715e } /* Comment */
     .err { color: #960050; background-color: #1e0010 } /* Error */
     .k { color: #66d9ef } /* Keyword */
